--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "csv-writer": "^1.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
